Correction image addition and text size amendment

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>odin-recipes</title>
 </head>
 <body>
-    
+ <font size="8"><h1>Odin Recipes</h1></font>
+ <img src="/recipes/img/several meals.jpg" alt="A collection of several sumptuous meals">
+<ul></ul>
+<font size="2"><h1><li><a href="recipes/pizza.html">Pizza Recipe</a></li></h1></font>
+<font size="2"><h1><li><a href="recipes/russian omelet.html">Russian Omelet</a></li></h1></font>
+
 </body>
 </html>
