Added Banan-Nutela to index.html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <ul></ul>
 <font size="2"><h1><li><a href="recipes/pizza.html">Pizza Recipe</a></li></h1></font>
 <font size="2"><h1><li><a href="recipes/russian omelet.html">Russian Omelet</a></li></h1></font>
+<font size="2"><h1><li><a href="recipes/Banana-Nutella Crepe.html">Banana-Nutella Crepe</a></li></h1></font>
 
 </body>
 </html>
