--- a/recipes/Banana-Nutella Crepe.html
+++ b/recipes/Banana-Nutella Crepe.html
@@ -19,28 +19,37 @@
 
 <h1>Ingredients</h1>
 <ul>
-    <li>2 cup all purpose flour</li>
-    <li>100 ml tomato ketchup</li>
+    <li>2 Bananas</li>
+    <li>1 Egg, large</li>
     <li>1 tomato</li>
     <li>2 onion</li>
-    <li>1 teaspoon chilli flakes</li>
-    <li>1 teaspoon baking powder</li>
-    <li>water as required</li>
-    <li>1 teaspoon sugar</li>
-    <li>1 tablespoon dry yeast</li>
-    <li>1/2 capsicum (green pepper)</li>
-    <li>100 gm processed cheese</li>
-    <li>4 mushroom</li>
-    <li>1/2 cup mozzarella</li>
-    <li>1 teaspoon oregano</li>
+    <li>1/4 cup Nutella</li>
+    <li>1 Confectioners' sugar</li>
+    <li>1/2 cup Flour</li>
+    <li>1 Pinch Salt</li>
+    <li>1 Butter</li>
+    <li>1 tbsp Butter</li>
+    <li>6 tbsp Low-fat milk</li>
+    <li>1/4 cup Water</li>
+    
 </ul>
 <h1>Steps</h1>
 <ol>
-<li>Preparation of the pizza dough</li>
-<li>Preparation of the pizza base</li>
-<li>Chopping of all the vegetables for the pizza</li>
-<li> Spreading the sauce and veggies on the base</li>
-<li>Baking the pizza at 250 degrees celcius for 10 minutes</li>
+<li>Slice banana into rounds.</li>
+
+<li>In a pan,melt butter,then add light brown sugar and stir, then add the banana rounds and cook for 2 minutes.Set aside.</li>
+
+<li>Combine all dry ingredients and set aside.</li>
+
+<li> In a separate bowl, lightly whisk eggs. Little by little, incorporate the dry ingredients, and mix until smooth (if batter seems tough add a small amount of milk to loosen it). Stir in the olive oil.</li>
+<li>Set an 8-inch frying pan over medium heat and add a touch of olive oil. Using a ladle, pour 2 ounces of the crêpe batter into the frying pan, and in a circular turning motion, let the batter move evenly around the pan. </li>
+
+<li>Cook until the outside edge of the crêpe is light brown; then flip the crêpe and cook the other side. It should take no more than 2 minutes to cook. </li>
+<li>Slide the cooked crêpe onto a plate. With a spoon, spread Nutella on half of the crêpe. Place the bananas (which should still be warm) on top. </li>
+<li>Either fold the other half of the crêpe over the bananas and Nutella to form a half-moon, or line up the bananas and roll the crêpe. </li>
+
+<p><a href="#top"></a> Go to top</p>
+<p><a href="/index.html"></a> Go to main page</p>
 
 </ol>
 </body>
