Relative links to index and section on Banan-Nutella Crepe.html page

--- a/recipes/Banana-Nutella Crepe.html
+++ b/recipes/Banana-Nutella Crepe.html
@@ -48,8 +48,8 @@
 <li>Slide the cooked crêpe onto a plate. With a spoon, spread Nutella on half of the crêpe. Place the bananas (which should still be warm) on top. </li>
 <li>Either fold the other half of the crêpe over the bananas and Nutella to form a half-moon, or line up the bananas and roll the crêpe. </li>
 
-<p><a href="#top"></a> Go to top</p>
-<p><a href="/index.html"></a> Go to main page</p>
+<ul><p><a href="#top"> Go to top</a> </p></ul>
+<ul><p> <a href="../index.html">go to home page</a></p></ul>
 
 </ol>
 </body>
