Changed font size smaller

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -14,11 +14,11 @@
 <br>
 <font size="80"><h1>Description</h1></font>
 
-<p> <font size ="100">  Welcome to the place where you will learn how to cook mouth watering Pizza  Pizza is one of the world's most well-known and popular dishes. <br> Pizzas are a symbol of many ancient societies around the Mediterranean Sea and cannot <br>be categorized as just another sort of meal.<br>  Pizzas are available in a variety of forms and sizes.<br> Pizzas are typically circular and constructed of flat baked bread topped with a variety of toppings.Pizza is known in the United States as pizza pie.<br> Pizza can be described as an oven-baked,<br> flat, and generally round pizza. The pizza dough is often referred to as a pizza base or a crust <br> in the United States. Tomato sauce and cheese are the most typical toppings on a pizza foundation.</font> </p>
+<p> <font size ="5">  Welcome to the place where you will learn how to cook mouth watering Pizza  Pizza is one of the world's most well-known and popular dishes. <br> Pizzas are a symbol of many ancient societies around the Mediterranean Sea and cannot <br>be categorized as just another sort of meal.<br>  Pizzas are available in a variety of forms and sizes.<br> Pizzas are typically circular and constructed of flat baked bread topped with a variety of toppings.Pizza is known in the United States as pizza pie.<br> Pizza can be described as an oven-baked,<br> flat, and generally round pizza. The pizza dough is often referred to as a pizza base or a crust <br> in the United States. Tomato sauce and cheese are the most typical toppings on a pizza foundation.</font> </p>
 
 
 <h1>Ingredients</h1>
-<ul>
+<ul>><font size="5">
     <li>2 cup all purpose flour</li>
     <li>100 ml tomato ketchup</li>
     <li>1 tomato</li>
@@ -33,15 +33,15 @@
     <li>4 mushroom</li>
     <li>1/2 cup mozzarella</li>
     <li>1 teaspoon oregano</li>
-</ul>
+</font></ul>
 <h1>Steps</h1>
-<ol>
+<ol>><font size="5">
 <li>Preparation of the pizza dough</li>
 <li>Preparation of the pizza base</li>
 <li>Chopping of all the vegetables for the pizza</li>
 <li> Spreading the sauce and veggies on the base</li>
 <li>Baking the pizza at 250 degrees celcius for 10 minutes</li>
-</ol>
+</font></ol>
 
 <ul><p><a href="#top"> Go to top</a> </p></ul>
 <ul><p> <a href="../index.html">go to home page</a></p></ul>
