--- a/recipes/russian omelet.html
+++ b/recipes/russian omelet.html
@@ -14,12 +14,12 @@
 <br>
 <h1>Description</h1>
 
-<p>An omelette (sometimes written omelet) is a dish formed with beaten eggs and <br>  fried in a frying pan with butter or oil (without stirring as in scrambled egg)<br>. Folding the omelette around contents like chives, vegetables, mushrooms,<br>  meat ,cheese, onions, or a mix of the aforementioned is extremely frequent<br>. A tiny amount of milk, cream, or water is often used to beat whole eggs or egg whites.</p>
+<p><font size="5">An omelette (sometimes written omelet) is a dish formed with beaten eggs and <br>  fried in a frying pan with butter or oil (without stirring as in scrambled egg)<br>. Folding the omelette around contents like chives, vegetables, mushrooms,<br>  meat ,cheese, onions, or a mix of the aforementioned is extremely frequent<br>. A tiny amount of milk, cream, or water is often used to beat whole eggs or egg whites.</font></p>
 
-<p> Omelets are the perfect breakfast option. They're healthy, filling, and they're simply delicious<br> . They're even great for both vegetarians and meat eaters alike. The many health benefits, though,<br>  are reason enough to love the omelet.Two of the most common variations in the United States<br>  are the "Denver" and "Southwest." Both contain generous amounts of cheddar cheese,<br>  bell peppers, and usually diced ham; Denver versions are often topped <br> with hot sauce, while Southwest dishes may come with salsa and sour cream.</p>
+<p> <font size="5"> Omelets are the perfect breakfast option. They're healthy, filling, and they're simply delicious<br> . They're even great for both vegetarians and meat eaters alike. The many health benefits, though,<br>  are reason enough to love the omelet.Two of the most common variations in the United States<br>  are the "Denver" and "Southwest." Both contain generous amounts of cheddar cheese,<br>  bell peppers, and usually diced ham; Denver versions are often topped <br> with hot sauce, while Southwest dishes may come with salsa and sour cream. </font></p>
 
 <h1>Ingredients</h1>
-<ul>
+<ul><font size="5">
     <li>large eggs, beaten</li>
     <li>tablespoons water</li>
     <li>salt and pepper</li>
@@ -31,11 +31,11 @@
     
 </ul>
 <h1>Steps</h1>
-<ol>
-<li>Beat eggs with water; season with salt and pepper. Set aside. Spray an 8-inch omelet pan or nonstick skillet with cooking spray. Heat skillet over medium heat.</li>
+<ol><font size="5">
+<li>Beat eggs with water; season with salt and pepper. Set aside. Spray an 8-inch<br> omelet pan or nonstick skillet with cooking spray. Heat skillet over medium heat.</li>
 <li>Add potatoes to skillet. Heat until heated through. (Or microwave until heated through). Set aside.</li>
-<li>Pour eggs into skillet. (Eggs should set immediately at edges). With an inverted pancake turner, carefully push cooked portions at edges toward center so uncooked portions can reach hot pan surface, tilting pan and moving cooked portions as necessary.</li>
-<li> Spoon potatoes over half of the omelet. Spoon sour cream over the potatoes. Sprinkle green onions over the sour cream. Cook for about 30 seconds more. Slide from pan onto plate.</li>
+<li>Pour eggs into skillet. (Eggs should set immediately at edges). With an inverted pancake turner,<br> carefully push cooked portions at edges toward center so uncooked portions can reach hot pan surface,<br> tilting pan and moving cooked portions as necessary.</li>
+<li> Spoon potatoes over half of the omelet. Spoon sour cream over the potatoes. Sprinkle green onions <br> over the sour cream. Cook for about 30 seconds more. Slide from pan onto plate.</li>
 <li>Top omelet with a dollop of sour cream and green onions if desired.</li>
 
 <ol>
