--- a/recipes/Banana-Nutella Crepe.html
+++ b/recipes/Banana-Nutella Crepe.html
@@ -14,11 +14,11 @@
 <br>
 <font size="80"></font><h1>Description</h1>
 
-<p><font size ="100"> If you haven't experienced Nutella, the incredible chocolate-hazelnut spread, go out and get a jar right now. Nutella is similar to how you can add cheese on almost anything to make it taste better. Read on for some fun ways to satisfy your chocolate cravings that aren't as boring as eating it straight from the jar. Melt some Nutella and pour it over ice cream for a quick hot fudge sundae if you're seeking something decadent. Nutella can also be used as an icing for cakes and cookies, providing the perfect balance of ease and simplicity.</font></p>
+<p><font size ="5"> If you haven't experienced Nutella, the incredible chocolate-hazelnut spread,<br> go out and get a jar right now. Nutella is similar to how you can add cheese<br> on almost anything to make it taste better. Read on for some fun<br> ways to satisfy your chocolate cravings that aren't as boring as eating <br>it straight from the jar. Melt some Nutella and pour it over ice cream <br>for a quick hot fudge sundae if you're seeking something decadent. <br>Nutella can also be used as an icing for cakes and cookies, providing<br> the perfect balance of ease and simplicity.</font></p>
 
 
 <h1>Ingredients</h1>
-<ul>
+<ul ><font size="5">
     <li>2 Bananas</li>
     <li>1 Egg, large</li>
     <li>1 tomato</li>
@@ -32,25 +32,25 @@
     <li>6 tbsp Low-fat milk</li>
     <li>1/4 cup Water</li>
     
-</ul>
+  </font></ul>
 <h1>Steps</h1>
-<ol>
+<ol><font size="5">
 <li>Slice banana into rounds.</li>
 
-<li>In a pan,melt butter,then add light brown sugar and stir, then add the banana rounds and cook for 2 minutes.Set aside.</li>
+<li>In a pan,melt butter,then add light brown sugar and stir,<br> then add the banana rounds and cook for 2 minutes.Set aside.</li>
 
 <li>Combine all dry ingredients and set aside.</li>
 
-<li> In a separate bowl, lightly whisk eggs. Little by little, incorporate the dry ingredients, and mix until smooth (if batter seems tough add a small amount of milk to loosen it). Stir in the olive oil.</li>
-<li>Set an 8-inch frying pan over medium heat and add a touch of olive oil. Using a ladle, pour 2 ounces of the crêpe batter into the frying pan, and in a circular turning motion, let the batter move evenly around the pan. </li>
+<li> In a separate bowl, lightly whisk eggs. Little by little, <br>incorporate the dry ingredients, and mix until smooth <br>(if batter seems tough add a small amount of milk to loosen it).<br> Stir in the olive oil.</li>
+<li>Set an 8-inch frying pan over medium heat and add a touch of olive oil.<br> Using a ladle, pour 2 ounces of the crêpe batter into the frying pan,<br> and in a circular turning motion, let the batter move evenly around the pan. </li>
 
-<li>Cook until the outside edge of the crêpe is light brown; then flip the crêpe and cook the other side. It should take no more than 2 minutes to cook. </li>
-<li>Slide the cooked crêpe onto a plate. With a spoon, spread Nutella on half of the crêpe. Place the bananas (which should still be warm) on top. </li>
-<li>Either fold the other half of the crêpe over the bananas and Nutella to form a half-moon, or line up the bananas and roll the crêpe. </li>
-
+<li>Cook until the outside edge of the crêpe is light brown; then flip the <br> crêpe and cook the other side. It should take no more than 2 minutes to cook. </li>
+<li>Slide the cooked crêpe onto a plate. With a spoon, spread Nutella <br>on half of the crêpe. Place the bananas (which should still be warm) on top. </li>
+<li>Either fold the other half of the crêpe over the bananas and Nutella to<br> form a half-moon, or line up the bananas and roll the crêpe. </li>
+</font></ol>
 <ul><p><a href="#top"> Go to top</a> </p></ul>
 <ul><p> <a href="../index.html">go to home page</a></p></ul>
 
-</ol>
+
 </body>
 </html>
