Unorderd list for links update

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <title>odin-recipes</title>
 </head>
 <body>
- <font size="8"><h1>Odin Recipes</h1></font>
- <img src="/recipes/img/several meals.jpg" alt="A collection of several sumptuous meals">
-<ul></ul>
+ <font size="7"><h1>Odin Recipes</h1></font>
+ <br>
+ <img src="recipes/img/several meals.jpg" alt="A collection of several sumptuous meals">
+<ul>
 <font size="2"><h1><li><a href="recipes/pizza.html">Pizza Recipe</a></li></h1></font>
 <font size="2"><h1><li><a href="recipes/russian omelet.html">Russian Omelet</a></li></h1></font>
 <font size="2"><h1><li><a href="recipes/Banana-Nutella Crepe.html">Banana-Nutella Crepe</a></li></h1></font>
-
+</ul>
 </body>
 </html>
