Corrected > from details and step list

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -18,7 +18,7 @@
 
 
 <h1>Ingredients</h1>
-<ul>><font size="5">
+<ul><font size="5">
     <li>2 cup all purpose flour</li>
     <li>100 ml tomato ketchup</li>
     <li>1 tomato</li>
@@ -35,7 +35,7 @@
     <li>1 teaspoon oregano</li>
 </font></ul>
 <h1>Steps</h1>
-<ol>><font size="5">
+<ol><font size="5">
 <li>Preparation of the pizza dough</li>
 <li>Preparation of the pizza base</li>
 <li>Chopping of all the vegetables for the pizza</li>
