made a code block for Image tag

--- a/recipes/Banana-Nutella Crepe.html
+++ b/recipes/Banana-Nutella Crepe.html
@@ -10,7 +10,10 @@
   <font size="80"><h1><a name ="top"></a>crepe bar nutella</a></h1>
    
 
-<img src="/recipes/img/crepe bar nutella.jpg" alt="An image of mouth watering Banana-Nutella Crepe">
+<img 
+    src="/img/crepe bar nutella.jpg" 
+    alt="An image of mouth watering Banana-Nutella Crepe"
+    >
 
 <font size="80"></font><h1>Description</h1>
 
