added code blocks

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -10,7 +10,10 @@
   <font size="80"><h1><a name ="top"></a>Pizza Recipes</a></h1>
    
 
-<img src="/recipes/img/pizza image.jpg" height="400" width="650" alt="An image of mouth watering Pizza">
+<img 
+src="/recipes/img/pizza image.jpg" height="400"width="650"
+alt="An image of mouth watering Pizza"
+>
 
 <font size="80"><h1>Description</h1></font>
 
