--- a/recipes/russian omelet.html
+++ b/recipes/russian omelet.html
@@ -7,10 +7,12 @@
     <title>Russian Omelet</title>
 </head>
 <body>
-  <font size="80"><h1><a name ="top"></a>Russian Omelet</a></h1>
-   
+  <h1><a name ="top"></a>Russian Omelet</a></h1>
 
-<img src="/recipes/img/russian omelet.jpg" height ="500" width ="750"alt="An image of russian omelet">
+    <p><img 
+      src="/recipes/img/russian.jpg"
+      alt="Image of a russian omelet"
+      >
 
 <h1>Description</h1>
 
