--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -11,7 +11,7 @@
    
 
 <img 
-src="/recipes/img/pizza image.jpg" height="400"width="650"
+src="https://cdn.britannica.com/08/177308-050-94D9D6BE/Food-Pizza-Basil-Tomato.jpg" height="400"width="650"
 alt="An image of mouth watering Pizza"
 >
 
