--- a/recipes/russian omelet.html
+++ b/recipes/russian omelet.html
@@ -9,10 +9,7 @@
 <body>
   <h1><a name ="top"></a>Russian Omelet</a></h1>
 
-    <p><img 
-      src="/recipes/img/russian.jpg"
-      alt="Image of a russian omelet"
-      >
+    <img src="https://www.recipezazz.com/media/photos/photos/6/8/9/6/7/russian-omelet-68967_720x450_1506660c.jpg" alt="Image of a russian omelet">
 
 <h1>Description</h1>
 
@@ -43,8 +40,6 @@
 <ol>
   <ul><p><a href="#top"> Go to top</a> </p></ul>
 <ul><p> <a href="../index.html">go to home page</a></p></ul>
-</body>
-</html>
 </ol>
 </body>
 </html>
